# AgentForge

./: .gitignore  AGENTS.md  BOUNTY.md  CLAUDE.md  README.md  demo-recording-script.md  demo-video-guide.md
agent/: .dockerignore  .env.example  ARCHITECTURE.md  COST_ANALYSIS.md  Dockerfile  README.md  SOCIAL_POST.md  TESTING.md  pyproject.toml
agent/docs/: architecture.md  cost-analysis.md
agent/evals/: README.md  bt_eval.py  eval_runner.py  generate_eval_pdf.py  generate_report.py  test_golden.py  test_guardrails.py
agent/evals/checks/: assertions.py
agent/evals/datasets/: cases.json  golden_set.yaml  guardrails_cases.json  preference_cases.json
agent/evals/runners/: eval_runner.py
agent/scripts/: seed_portfolio.py
agent/src/: agent.py  client.py  main.py
agent/src/agentforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent/src/memory/: __init__.py  chat_history.py  store.py
agent/src/observability/: __init__.py  cost.py  metrics.py  timing.py  tracing.py
agent/src/prompts/: system.py
agent/src/tools/: __init__.py  accounts.py  benchmark.py  congressional_trades.py  create_order.py  delete_order.py  dividends.py  market_data.py  market_news.py  mock_congressional_trades.json  mock_news_data.json  portfolio.py  preferences.py  transactions.py  (+1 more)
agent/tests/: conftest.py  test_api.py  test_chat_history.py  test_client.py  test_confidence.py  test_context.py  test_cost.py  test_eval_checks.py  test_eval_dataset.py  test_memory.py  test_observability.py  test_scope.py  test_tools.py  test_verification.py  test_verification_layer.py
(+38 files in other folders)
